fixed images appearing behind overlay

--- a/style.css
+++ b/style.css
@@ -805,7 +805,6 @@ h1 {
 	right: 0;
 	bottom: 0;
 	background-color: rgba(0, 0, 0, 0.8); 
-	z-index: 15;
 	cursor: default;
 	transition:all 1s linear;
 	display: flex;
@@ -813,6 +812,7 @@ h1 {
 	align-items: center;
 	justify-content: center;
 	transition-duration: 0.2s;
+	z-index: 115 !important;
 }
 
 #imageEnlargen img {
